argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-alb-ingress
  namespace: argocd
  labels:
    app: argocd-alb-ingress
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-certificate-no: "35351"
    alb.ingress.kubernetes.io/actions.ssl-redirect: |
      {"type":"redirect","redirectConfig":{"port":"443","protocol":"HTTPS","statusCode":"HTTP_301"}}
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: argocd-server
      port:
        number: 80
  rules:
    - host: argo.wookja.site
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
